06/01/12 Julien Dutheil
* Added support for "!" state in nucleixc alphabet, which can be either a gap or an unknown character.

24/11/11 Julien Dutheil
* Added SequenceWalker class and test.

22/11/11 Sylvain Gaillard
* Added support for FastQ

21/11/11 Julien Dutheil
* Added support for GFF3.

21/11/11 Sylvain Gaillard
* Bug #35 solved.

18/11/11 Julien Dutheil
* New MafIterators: SequenceStatistics and PairwiseSequenceStatistics.
* Function SequenceTools::getPercentIdentity now allows to exclude gaps.

15/09/11 Julien Dutheil
* Merge function of SequenceWithAnnotation now also merges annotations properly.

17/06/11 Julien Dutheil
* Bug #39 solved.

09/06/11 -*- Version 2.0.2 -*-

08/06/11 Julien Dutheil
* Fixed several Maf iterators.

28/02/11 -*- Version 2.0.1 -*-

* Fixed debian packaging. 

07/02/11 -*- Version 2.0.0 -*-

19/11/10 Julien Dutheil
* Solved bug 0000016 (General comments not copied in containers).
* A few more code cleaning.

01/11/10 Julien Dutheil
* Solved bug 0000005 (Clustal parser).
* Added unit testing for sequence input format.
* Solved bug 0000004 (Remove gap sites in SiteContainer).

12/10/10 Benoît Nabholz
* Added yeast mitochondrial codon alphabet and genetic code.

20/09/10 Julien Dutheil
* Reorganization of the code for version 2.0.

06/09/10 Julien Dutheil
* Added support for masked sequences in SequenceWithAnnotationTools and MafParser.

05/09/10 Julien Dutheil
* First draft of CaseMaskedAlphabet, for dealing with repeat-masked sequences for instance.

21/07/10 Julien Dutheil
* Added method hasSequence(name) in SequenceContainer interface.

20/07/10 Julien Dutheil
* New Sequence interface design.
* Maf parser now reads quality scores if there are some.

19/07/10 Julien Dutheil
* New method isInit in CodonAlphabet.
* New method getCDS in SequenceTools.

28/04/10 Julien Dutheil
* New MAF genome alignment parser.

22/04/10 Sylvain Gaillard
* Break SequenceTools interface:
		- renamed invert -> getInvert